--- a/oauth2_19_RS/src/main/resources/application.properties
+++ b/oauth2_19_RS/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port=9090
 
 #clientId and clientSecret needed because security.tokenKeyAccess("isAuthenticated()") in authorizationServer
 
-security.oauth2.client.client-id=client1
-security.oauth2.client.client-secret=secret1
+security.oauth2.client.client-id=omni
+security.oauth2.client.client-secret=omni
 security.oauth2.resource.jwt.key-uri=http://localhost:8080/oauth/token_key
