--- a/oauth2_18/pom.xml
+++ b/oauth2_18/pom.xml
@@ -78,6 +78,17 @@
 	</dependencyManagement>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>
+          src/main/resources</directory>
+				<includes>
+					<include>ssia.jks</include>
+				</includes>
+			</resource>
+		</resources>
+
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
